small hellforge fluid and other logic rework